--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mexico = N\n",
+    "mexico = countries[3]\n",
     "mexico"
    ]
   },
