--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,8 @@
     }
    ],
    "source": [
-    "kindof_neighbors = countries[2:4]\n",
+    "kindof_neighbors = countries[2:6\n",
+    "                            ]\n",
     "kindof_neighbors"
    ]
   },
