--- a/index.ipynb
+++ b/index.ipynb
@@ -213,16 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Argentina', 'Mexico']"
+       "['Argentina', 'Mexico', 'USA', 'Morocco']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
