--- a/index.ipynb
+++ b/index.ipynb
@@ -228,8 +228,7 @@
     }
    ],
    "source": [
-    "kindof_neighbors = countries[2:6\n",
-    "                            ]\n",
+    "kindof_neighbors = countries[2:6]\n",
     "kindof_neighbors"
    ]
   },
