--- a/index.ipynb
+++ b/index.ipynb
@@ -213,22 +213,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Argentina', 'Mexico', 'USA']"
+       "['USA', 'Argentina', 'Mexico', 'USA']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kindof_neighbors = countries[2:5]\n",
+    "kindof_neighbors = countries[1:5]\n",
     "kindof_neighbors"
    ]
   },
@@ -252,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "None # add code herec"
    ]
   },
   {
