Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -252,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code herec"
+    "countries.append # add code herecountri"
    ]
   },
   {
