--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -252,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Malta') # add code herecountri"
+    "countries.append # add code herecountri"
    ]
   },
   {
