Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,20 @@
     }
    ],
    "source": [
-    "countries =  # add code here"
+    "countries = ['Croatia',\n",
+    " 'USA',\n",
+    " 'Argentina',\n",
+    " 'Mexico',\n",
+    " 'USA',\n",
+    " 'Morocco',\n",
+    " 'New Mexico',\n",
+    " 'Finland',\n",
+    " 'Argentina',\n",
+    " 'Italy',\n",
+    " 'Canada',\n",
+    " 'South Korea',\n",
+    " 'Malta',\n",
+    " 'Thailand'] # add code here"
    ]
   },
   {
