Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -341,7 +341,7 @@
     " 'Mexico',\n",
     " 'USA',\n",
     " 'Morocco',\n",
-    " 'New Mexico',\n",
+    " 'USA',\n",
     " 'Finland',\n",
     " 'Argentina',\n",
     " 'Italy',\n",
