--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -447,7 +447,7 @@
     }
    ],
    "source": [
-    "unique_countries = set(countries)"
+    "unique_countries = set(unique_countries)"
    ]
   },
   {
