--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = len(countries) - \n",
+    "num_of_repeats = len(countries) - len(unique-countries)\n",
     "num_of_repeats # 3"
    ]
   },
